# ChangeLog for net-im/pidgin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.246 2011/07/27 07:01:12 pva Exp $

*pidgin-2.9.0-r1 (27 Jul 2011)

  27 Jul 2011; Peter Volkov <pva@gentoo.org> +pidgin-2.9.0-r1.ebuild,
  +files/pidgin-2.9.0-conversation.c.patch:
  Fix multiple display of room members, bug 375627 thank Antonov Nikolay for
  digging patch.

  09 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> pidgin-2.9.0.ebuild:
  ppc stable wrt #372785

  06 Jul 2011; Mark Loeser <halcy0n@gentoo.org> pidgin-2.9.0.ebuild:
  Stable for ppc64; bug #372785

  03 Jul 2011; Raúl Porcel <armin76@gentoo.org> pidgin-2.9.0.ebuild:
  alpha/ia64/sparc stable wrt #372785

  01 Jul 2011; Peter Volkov <pva@gentoo.org> pidgin-2.9.0.ebuild:
  Depend on avahi[dbus] for required avahi-client, bug #373659 thank Antonio
  Quartulli for report.

  29 Jun 2011; Christoph Mende <angelos@gentoo.org> pidgin-2.9.0.ebuild:
  Stable on amd64 wrt bug #372785

  29 Jun 2011; Thomas Kahle <tomka@gentoo.org> pidgin-2.9.0.ebuild:
  x86 stable per bug 372785

  29 Jun 2011; Jeroen Roovers <jer@gentoo.org> pidgin-2.9.0.ebuild:
  Stable for HPPA (bug #372785).

*pidgin-2.9.0 (27 Jun 2011)

  27 Jun 2011; Peter Volkov <pva@gentoo.org> +pidgin-2.9.0.ebuild:
  Version bump, fixes security bug #372785 thank tman and jer for report.

  20 Jun 2011; Peter Volkov <pva@gentoo.org> pidgin-2.8.0-r1.ebuild:
  Allow pidgin be built against net-libs/libgadu[-ssl], bug 372075 thank
  Bartosz Brachaczek for report.

*pidgin-2.8.0-r1 (19 Jun 2011)

  19 Jun 2011; Peter Volkov <pva@gentoo.org> +pidgin-2.8.0-r1.ebuild,
  +files/pidgin-2.8.0-finch-icq.patch:
  Fix finch inability to connect to ICQ networks, bug 372037 thank Mario for
  report.

*pidgin-2.8.0 (14 Jun 2011)

  14 Jun 2011; Peter Volkov <pva@gentoo.org> +pidgin-2.8.0.ebuild:
  Version bump, bug #370783 thank tman for report.
