@@ -2,13 +2,15 @@ AUX pidgin-2.7.2-ldflags.patch 1593 RMD160 ade438f25d0af927485523e561ce728762645
 AUX pidgin-2.7.3-ldflags.patch 1332 RMD160 0dd11485e9c990dab1230629faac704835a91ae4 SHA1 7bbb420a206bf6cb366bf501b90c893e896a1f65 SHA256 1f8574a9c2f056ba8c07559623da8c9ce241928f060898752eef5770dd1d081a
 AUX pidgin-2.8.0-finch-icq.patch 602 RMD160 7aa3168c557985ef2f6f4381ff0b60d3bd9c4fd1 SHA1 1d1aaf53ef0a46d486c9746cff22cc0bfa855158 SHA256 15caf0a737fb9d1e6f02dbf567107abe7121bc79f18568c2216539b80dbc7d04
 AUX pidgin-2.9.0-conversation.c.patch 523 RMD160 61922053efdaf25e9580dc4199df75b60c0c976d SHA1 e185accd3dde589b93baf53086790f88b2162f61 SHA256 43efe68ca8451c993ed46e9523e5eaf419f099d60c3499ab6e451d322c87d63f
+DIST pidgin-2.10.0.tar.bz2 9941288 RMD160 316e948bc4db03b160962b4ee2b1df64d35be335 SHA1 859c6d9c9795c1adcf762b73e072e04a3a85a78d SHA256 f31f6a32c03e870a1774c827b8cee47ae8edd2c1ba8db98e8d58d9911cbaafcd
 DIST pidgin-2.7.11.tar.bz2 9978175 RMD160 2bee3fe39c02948d10e1fdb6fff2840941148786 SHA1 3da07577c15257108d61c7f2d3f63cd422cdb4d7 SHA256 a24e2c3118bd47983955d398c9cf5543c12e95527cdf7de9d273a6e92f9d160b
 DIST pidgin-2.8.0.tar.bz2 9921362 RMD160 92bed10284e2d88e18dbabaa2eac214c938c9adb SHA1 c5b4f06fc88d57054953044c75563a473bb352fd SHA256 71ced93efecd48a1114eaf6370adebf591ace31158457baf023d15892d663c78
 DIST pidgin-2.9.0.tar.bz2 9925589 RMD160 c093adadd3362ed7d266dfb07df5b75974605d5a SHA1 632c681030304443a911c9eeca6d582df0a24fbb SHA256 28ee8ece47d94ee1b708a78d613832ea88b56d879a93fa934d532d76ae52cfd7
+EBUILD pidgin-2.10.0.ebuild 6566 RMD160 647b455ec6f62f2591c33d7ae33ae1115b17b583 SHA1 23f32c6fef2a6504ad84e012ffc29e86684bfa4b SHA256 3b79b5cf07e527f64ee71e5db333961316f411c4ce38ed87a5e4570f504c31e7
 EBUILD pidgin-2.7.11.ebuild 6450 RMD160 15df33bfd9e0a4875a1206fe43cd54843104df69 SHA1 936ed58367c33e4df403d7764ecb7d51d2d6b9b6 SHA256 804438aedd0fd8b309c7291b60978b5cbad4acdc8c65e9fcf23722b978a4fa08
 EBUILD pidgin-2.8.0-r1.ebuild 6922 RMD160 d8ef43aa08c040fef51a39ec480a686a11c73f1b SHA1 590acac68022bf4f7a9617b03a1eb658414f8f78 SHA256 4e794fe3fdb55ecb1236a9c64acd592f313cb2bb6af34605ff1b4c74580d09e9
 EBUILD pidgin-2.8.0.ebuild 6835 RMD160 10c655434d6590a442b4cabfa9e0847c76fedfac SHA1 85783e1161b006f05d5bcf18a01053c5259e109f SHA256 6db41d97437a296141ae1234bd50d73e9808d28984f11d49d812eecbae5c38b9
 EBUILD pidgin-2.9.0-r1.ebuild 6643 RMD160 e92eaa5eb4adee2407fd95be576460b717d0eea5 SHA1 24ed54beb85844f03842d0b862e627b93e0c7e3b SHA256 849083f40ff6feb0f52e2e4066b576e13a5d2bf0a8381138dc2b9ac387a081c6
 EBUILD pidgin-2.9.0.ebuild 6564 RMD160 6ad35cd8e0e57fc926f717b9acdc0e204b1fec75 SHA1 74e25e6ed11be085dbdcd5712166d9bd4dfbc51f SHA256 07136384254a9cec2a3f98813265f4c85bbd4a05eabde343e6ffa31978f4de13
-MISC ChangeLog 34686 RMD160 bd7d9740f6a7ccb28de7d72e4f0f0be73f86d285 SHA1 0d69df9378e580114f93748a2923db4955447fcf SHA256 f8945f7b1ed2fb080a25f44933d6f9b292281024a61a66388141d890fe2b8bd9
+MISC ChangeLog 34857 RMD160 dc8c51207964c47fa910b871ac14e54341c3b683 SHA1 0e309bd7c3599e0da51ea0f571395fb4cda72cc8 SHA256 d4bea641be70527a8c2d8acf1715ed012735f211e99fa79fb475b71f9e6b93ac
 MISC metadata.xml 1347 RMD160 ab118b33da598ea43ea4adb8cd07d269faf19528 SHA1 d68aea7e02d1fa45f1a71eb34c98259d61c935ca SHA256 b1b9067810378483188a403fb85f8ff76bc5260cb4bb811179eed1088dd6f5ba
