@@ -1,6 +1,11 @@
 # ChangeLog for net-im/pidgin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.246 2011/07/27 07:01:12 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.247 2011/08/25 06:52:46 pva Exp $
+
+*pidgin-2.10.0 (25 Aug 2011)
+
+  25 Aug 2011; Peter Volkov <pva@gentoo.org> +pidgin-2.10.0.ebuild:
+  Version bump, fixes security issues bu #380207 thank tman for report.
 
 *pidgin-2.9.0-r1 (27 Jul 2011)
 
